@@ -1919,7 +1919,7 @@ struct_type_field_optcond:
         | IF expression
                 {
                   $$ = $2;
-                  PKL_AST_LOC ($$) = @$;
+                  PKL_AST_LOC ($$) = @2;
                 }
         ;
 
