@@ -1,5 +1,5 @@
 /* { dg-do compile } */
 
-if (10#B)  /* { dg-error "expected boolean" } */
+if (10#B)  /* { dg-error "invalid expression.*\n.*expected boolean" } */
   {
   }
